--- a/advancedslideshow/ui/captiondialog.ui
+++ b/advancedslideshow/ui/captiondialog.ui
@@ -188,12 +188,12 @@
   <customwidget>
    <class>KFontChooser</class>
    <extends>QWidget</extends>
-   <header>kfontdialog.h</header>
+   <header>KFontChooser</header>
   </customwidget>
   <customwidget>
    <class>KColorButton</class>
    <extends>QPushButton</extends>
-   <header>kcolorbutton.h</header>
+   <header>KColorButton</header>
   </customwidget>
  </customwidgets>
  <resources/>
