--- a/calendar/ui/calevents.ui
+++ b/calendar/ui/calevents.ui
@@ -27,7 +27,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="ohUrlWidget"/>
+    <widget class="KDcrawIface::RFileSelector" name="ohUrlRequester"/>
    </item>
    <item>
     <widget class="QLabel" name="ohExplainLabel" >
@@ -79,7 +79,7 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="fhUrlWidget"/>       
+    <widget class="KDcrawIface::RFileSelector" name="fhUrlRequester"/>       
    </item>
    <item>
     <widget class="QLabel" name="fhExplainLabel" >
@@ -121,6 +121,11 @@ This is fully optional. All the events from this calendar will be printed in gre
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <customwidgets>
+  <customwidget>
+   <class>KDcrawIface::RFileSelector</class>
+   <extends>QWidget</extends>
+   <header>KDCRAW/RWidgetUtils</header>
+  </customwidget>
  </customwidgets>
  <resources/>
  <connections/>
