--- a/advancedslideshow/ui/maindialog.ui
+++ b/advancedslideshow/ui/maindialog.ui
@@ -290,7 +290,7 @@
            </widget>
           </item>
           <item row="1" column="1" colspan="2">
-           <widget class="KComboBox" name="m_effectsComboBox"/>
+           <widget class="QComboBox" name="m_effectsComboBox"/>
           </item>
          </layout>
         </item>
