--- a/advancedslideshow/audio/soundtrackpage.ui
+++ b/advancedslideshow/audio/soundtrackpage.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SoundtrackDialog</class>
- <widget class="QWidget" name="SoundtrackDialog">
+ <class>SoundtrackPage</class>
+ <widget class="QWidget" name="SoundtrackPage">
   <property name="geometry">
    <rect>
     <x>0</x>
