--- a/advancedslideshow/dialogs/presentation_mainpage.ui
+++ b/advancedslideshow/dialogs/presentation_mainpage.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainPage</class>
- <widget class="QWidget" name="MainPage">
+ <class>PresentationMainPage</class>
+ <widget class="QWidget" name="PresentationMainPage">
   <property name="geometry">
    <rect>
     <x>0</x>
