--- a/PORT.KF5/PENDING/htmlexport/themes/floating_cards/style.css
+++ b/PORT.KF5/PENDING/htmlexport/themes/floating_cards/style.css
@@ -29,14 +29,18 @@ img.preload {
 
 div.select {
 	padding: 0 0 0 0;
-	margin: 0 0 0 0;
 	background-color: #444;
 	background-repeat: no-repeat;
 	background-position: center;
 	position: fixed;
 	width: 0px;
-	height: 33%;
-	top: 33%;
+	height: 0; /* overriden by max-height from thumb_size.css */
+	margin-top: auto;
+	margin-bottom: auto;
+	margin-left: 0;
+	margin-right: 0;
+	top: 26px;
+	bottom: 26px;
 }
 
 div.select:hover {
@@ -104,7 +108,6 @@ div.select.forward ul li {
 	margin-left: 16px;
 }
 
-
 /*********************************************************/
 /* header and navigation buttons at top of page          */
 
@@ -112,23 +115,23 @@ div.select.forward ul li {
 h1,h2 {
 	padding: 0 0 0 0;
 	margin: 0 125px 0 125px;	/* clear the (fixed-size) div.nav buttons in the corners */
-    	font-size: 80%;
 	text-align: center;
+	font-size: 100%;
 }
 
 h1 {
 	padding-top: 0.3em;
-	padding-bottom: 0.3em;
+	padding-bottom: 0px;
 }
 
 h2 {
-	min-height: 1em;		/* 1em here tries to approximate the font height to prevent the picture from moving up when the description is not present */
 	font-weight: normal;
+	padding-bottom: 0px;
+	padding-bottom: 0.3em;
 }
 
 div.nav {
 	position: fixed;
-	top: 0;
 }
 
 div.nav.left {
@@ -143,6 +146,9 @@ div.nav a {
 	padding-left: 20px;
 	padding-right: 20px;
 	background-color: #444;
+	font-size: 16px;
+	height: 21px;
+	overflow: hidden;
 }
 
 
@@ -167,7 +173,7 @@ div.nav img {
 	margin-right: 5px;
 	margin-top: 3px;
 	margin-bottom: 3px;
-	vertical-align: middle;
+	vertical-align: top;
 }
 
 /*********************************************************/
@@ -219,18 +225,79 @@ li a:hover {
 /*********************************************************/
 /* image page  			  			 */
 
+div.fix {
+	bottom: 0;
+	left: 0;
+	right: 0;
+	top: 0;
+	position: absolute;
+}
+
+div.fix h1, div.fix h2 {
+	margin-top: 0;
+	margin-bottom: 0;
+	margin-left: auto;
+	margin-right: auto;
+	position: absolute;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+div.fix h1 {
+	top: 0px;
+	left: 125px;
+	right: 125px;
+	height: 1.2em;
+}
+
+div.fix h2 {
+	bottom: 0px;
+	left: 25px;
+	right: 25px;
+	height: 1.2em;
+}
+
+div.fix h1:hover, div.fix h2:hover {
+	height: auto;
+	min-height: 1.2em;
+	background-color: #444;
+	white-space: normal;
+	left: 0px;
+	right: 0px;
+}
+
 div.image {
-	padding-top: 0.5em;
-	margin: 0 auto;
-	width: 95%;
+	position: absolute;
+	top: 1.5em;
+	bottom: 1.5em;
+	right: 25px;;
+	left: 25px;
 	text-align: center;
 }
 
+/* reserve for the padding of the contained img */
+div.image div {
+	position: absolute;
+	top: 10px; /* border + padding of img */
+	bottom: 10px;
+	right: 10px;
+	left: 10px;
 
-div.image img {
-	padding: 20px;
-	background-color: #000;
-	border: 1px solid #444;
+}
+
+div.image div img {
+	background-color: #111;
+	border: 0px solid #444;
+	max-width: 100%;
+	max-height: 100%;
+	position: absolute;
+	margin: auto;
+	padding: 10px;
+	top: -10px; /* -padding */
+	left: -10px;
+	right: -10px;
+	bottom: -10px;
 }
 
 
@@ -238,7 +305,7 @@ div.image img {
 /* very dark and non-disturbing footer                   */
 
 p.footer {
-	clear: both;
+	clear: both;	border-top: 1px solid #333;
 	border-top: 1px solid #333;
 	font-size: 70%;
 	text-align: right;
