Fix conflicts of shortcuts
Summary: Rotate left and Rotate right button have same shortcuts. They should be different to avoid conflicts.

Reviewers: #frameworks, apol

Reviewed By: apol

Differential Revision: https://phabricator.kde.org/D25564

--- a/printimages/ui/croppage.ui
+++ b/printimages/ui/croppage.ui
@@ -45,7 +45,7 @@
         <string>Rotate photo to the left</string>
        </property>
        <property name="text">
-        <string>&amp;Rotate left</string>
+        <string>Rotate &amp;left</string>
        </property>
       </widget>
      </item>
@@ -58,7 +58,7 @@
         <string>Rotate photo to the right</string>
        </property>
        <property name="text">
-        <string>&amp;Rotate right</string>
+        <string>Rotate &amp;right</string>
        </property>
       </widget>
      </item>
